// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute nav endpoint should return success 1`] = `
{
  "data": {
    "result": 4.377e+21,
    "timestamps": {
      "providerIndicatedTimeUnixMs": null,
    },
  },
  "result": 4.377e+21,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute reserve endpoint should return success 1`] = `
{
  "data": {
    "result": 1e+23,
  },
  "result": 1e+23,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": null,
  },
}
`;
